modules/gdscript/tests/scripts/parser/errors/static_constructor_not_static.gd
func _static_init():
	print("static init")

func test():
	print("done")
